--- a/3. ActiveX/ActiveXCPP2/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/3. ActiveX/ActiveXCPP2/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -114,6 +114,23 @@
       <WrapperTool>aximp</WrapperTool>
       <Isolated>False</Isolated>
     </COMReference>
+    <COMReference Include="AxMFCActiveXControl1Lib">
+      <Guid>{0804CFE8-DB55-42FC-8882-169886F4468A}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>aximp</WrapperTool>
+      <Isolated>False</Isolated>
+    </COMReference>
+    <COMReference Include="MFCActiveXControl1Lib">
+      <Guid>{0804CFE8-DB55-42FC-8882-169886F4468A}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
